--- a/Data_Class/Untitled-1.ipynb
+++ b/Data_Class/Untitled-1.ipynb
@@ -2,16 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Data_Class'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [6], line 7\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mSQL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m  sql_datenLadenStammdaten,sql_datenLadenKunden,sql_datenLadenOderItems,sql_datenLadenLabel, sql_datenLadenMaster_CS_OUT,datenSpeichern_CS_OUT_STammdaten\n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mSQL\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SQL_TabellenLadenBearbeiten \u001b[38;5;28;01mas\u001b[39;00m SQL\n\u001b[0;32m----> 7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mData_Class\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mDB_Daten_Agg\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m DatenAgregieren \u001b[38;5;28;01mas\u001b[39;00m DA\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Data_Class'"
+     ]
+    }
+   ],
    "source": [
     "from distutils.log import info\n",
     "import datetime\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from SQL import  sql_datenLadenStammdaten,sql_datenLadenKunden,sql_datenLadenOderItems,sql_datenLadenLabel, sql_datenLadenMaster_CS_OUT,datenSpeichern_CS_OUT_STammdaten\n",
-    "from SQL import SQL_TabellenLadenBearbeiten as SQL\n"
+    "from SQL import SQL_TabellenLadenBearbeiten as SQL\n",
+    "from Data_Class.DB_Daten_Agg import DatenAgregieren as DA\n",
+    "\n",
+    "\n",
+    "        df['Picks Karton offen']         df['Picks Paletten offen']        df['Picks Stangen offen']        df['Picks Karton fertig']         df['Picks Paletten fertig']       df['Picks Stangen fertig']"
    ]
   },
   {
@@ -21,33 +37,33 @@
    "outputs": [],
    "source": [
     "\n",
-    "dfStammdaten = sql_datenLadenMaster_CS_OUT()\n",
+    "# dfStammdaten = sql_datenLadenMaster_CS_OUT()\n",
     "\n",
-    "dfStammdaten = dfStammdaten[dfStammdaten['UnitOfMeasure'].isin(['CS','D97','OUT'])]\n",
-    "dfStammdaten['MaterialNumber'] = dfStammdaten['MaterialNumber'].str.replace('0000000000', '')\n",
-    "dfStammdaten = dfStammdaten[dfStammdaten['UnitOfMeasure'].isin(['CS','D97','OUT'])]   \n",
-    "def f_CS(row):\n",
-    "    try:\n",
-    "        if row.UnitOfMeasure == 'CS':          \n",
-    "            return row.NumeratorToBaseUnitOfMeasure / row.DenominatorToBaseUnitOfMeasure\n",
-    "    except:\n",
-    "        return np.nan\n",
-    "def f_PAL(row):\n",
-    "    try:\n",
-    "        if row.UnitOfMeasure == 'D97':\n",
-    "            return row.NumeratorToBaseUnitOfMeasure / row.DenominatorToBaseUnitOfMeasure\n",
-    "    except:\n",
-    "        return np.nan\n",
-    "def f_OUT(row):\n",
-    "    try:\n",
-    "        if row.UnitOfMeasure == 'OUT':\n",
-    "            return row.NumeratorToBaseUnitOfMeasure / row.DenominatorToBaseUnitOfMeasure\n",
-    "    except:\n",
-    "        return np.nan\n",
-    "dfStammdaten['OUT'] = dfStammdaten.apply(f_OUT,axis=1)\n",
-    "dfStammdaten['CS'] = dfStammdaten.apply(f_CS,axis=1)\n",
-    "dfStammdaten['PAL'] = dfStammdaten.apply(f_PAL,axis=1)\n",
-    "#dfStammdaten.to_sql('CS_OUT_PAL_MaterialMasterUnitOfMeasures', SQL.db_conn.conn, if_exists='replace', index=False)\n",
+    "# dfStammdaten = dfStammdaten[dfStammdaten['UnitOfMeasure'].isin(['CS','D97','OUT'])]\n",
+    "# dfStammdaten['MaterialNumber'] = dfStammdaten['MaterialNumber'].str.replace('0000000000', '')\n",
+    "# dfStammdaten = dfStammdaten[dfStammdaten['UnitOfMeasure'].isin(['CS','D97','OUT'])]   \n",
+    "# def f_CS(row):\n",
+    "#     try:\n",
+    "#         if row.UnitOfMeasure == 'CS':          \n",
+    "#             return row.NumeratorToBaseUnitOfMeasure / row.DenominatorToBaseUnitOfMeasure\n",
+    "#     except:\n",
+    "#         return np.nan\n",
+    "# def f_PAL(row):\n",
+    "#     try:\n",
+    "#         if row.UnitOfMeasure == 'D97':\n",
+    "#             return row.NumeratorToBaseUnitOfMeasure / row.DenominatorToBaseUnitOfMeasure\n",
+    "#     except:\n",
+    "#         return np.nan\n",
+    "# def f_OUT(row):\n",
+    "#     try:\n",
+    "#         if row.UnitOfMeasure == 'OUT':\n",
+    "#             return row.NumeratorToBaseUnitOfMeasure / row.DenominatorToBaseUnitOfMeasure\n",
+    "#     except:\n",
+    "#         return np.nan\n",
+    "# dfStammdaten['OUT'] = dfStammdaten.apply(f_OUT,axis=1)\n",
+    "# dfStammdaten['CS'] = dfStammdaten.apply(f_CS,axis=1)\n",
+    "# dfStammdaten['PAL'] = dfStammdaten.apply(f_PAL,axis=1)\n",
+    "# #dfStammdaten.to_sql('CS_OUT_PAL_MaterialMasterUnitOfMeasures', SQL.db_conn.conn, if_exists='replace', index=False)\n",
     "\n"
    ]
   },
@@ -472,85 +488,94 @@
    ],
    "source": [
     "\n",
-    "heute  = datetime.date.today()\n",
-    "# heute plus 3 Tage\n",
-    "morgen =heute + datetime.timedelta(days=3)\n",
-    "day2 = heute - datetime.timedelta(days=90)\n",
-    "dfOrder = SQL.sql_datenLadenDatum(day2,morgen,SQL.tabelle_DepotDEBYKNOrders,SQL.datumSpalteLSüber)\n",
-    "#dfOrder = sql_datenLadenOder()\n",
-    "#dfOrder = sql_datenLadenDatum(day2,heute,'business_depotDEBYKN-DepotDEBYKNOrders')\n",
+    "# heute  = datetime.date.today()\n",
+    "# # heute plus 3 Tage\n",
+    "# morgen =heute + datetime.timedelta(days=3)\n",
+    "# day2 = heute - datetime.timedelta(days=90)\n",
+    "# dfOrder = SQL.sql_datenLadenDatum(day2,morgen,SQL.tabelle_DepotDEBYKNOrders,SQL.datumSpalteLSüber)\n",
+    "# #dfOrder = sql_datenLadenOder()\n",
+    "# #dfOrder = sql_datenLadenDatum(day2,heute,'business_depotDEBYKN-DepotDEBYKNOrders')\n",
     "\n",
-    "dfOrderItems = sql_datenLadenOderItems()\n",
-    "dfKunden = sql_datenLadenKunden()\n",
-    "dfLabel = sql_datenLadenLabel()\n",
+    "# dfOrderItems = sql_datenLadenOderItems()\n",
+    "# dfKunden = sql_datenLadenKunden()\n",
+    "# dfLabel = sql_datenLadenLabel()\n",
     "\n",
-    "dfOrderItems['MaterialNumber'] = dfOrderItems['MaterialNumber'].astype(str)\n",
-    "dfOrderItems['MaterialNumber'] = dfOrderItems['MaterialNumber'].str.replace('0000000000', '')\n",
-    "dfOrderItems = pd.merge(dfOrderItems, dfStammdaten[dfStammdaten['UnitOfMeasure'] == 'CS'][['MaterialNumber','CS']],left_on='MaterialNumber', right_on='MaterialNumber',how='left')\n",
-    "dfOrderItems = pd.merge(dfOrderItems, dfStammdaten[dfStammdaten['UnitOfMeasure'] == 'D97'][['MaterialNumber','PAL']],left_on='MaterialNumber', right_on='MaterialNumber',how='left')\n",
-    "dfOrderItems = pd.merge(dfOrderItems, dfStammdaten[dfStammdaten['UnitOfMeasure'] == 'OUT'][['MaterialNumber','OUT']],left_on='MaterialNumber', right_on='MaterialNumber',how='left')\n",
+    "# dfOrderItems['MaterialNumber'] = dfOrderItems['MaterialNumber'].astype(str)\n",
+    "# dfOrderItems['MaterialNumber'] = dfOrderItems['MaterialNumber'].str.replace('0000000000', '')\n",
+    "# dfOrderItems = pd.merge(dfOrderItems, dfStammdaten[dfStammdaten['UnitOfMeasure'] == 'CS'][['MaterialNumber','CS']],left_on='MaterialNumber', right_on='MaterialNumber',how='left')\n",
+    "# dfOrderItems = pd.merge(dfOrderItems, dfStammdaten[dfStammdaten['UnitOfMeasure'] == 'D97'][['MaterialNumber','PAL']],left_on='MaterialNumber', right_on='MaterialNumber',how='left')\n",
+    "# dfOrderItems = pd.merge(dfOrderItems, dfStammdaten[dfStammdaten['UnitOfMeasure'] == 'OUT'][['MaterialNumber','OUT']],left_on='MaterialNumber', right_on='MaterialNumber',how='left')\n",
     "\n",
-    "dfOrderItems['O'] = dfOrderItems['Outers'] * dfOrderItems['OUT']\n",
-    "dfOrderItems['PicksPAL'] = dfOrderItems.O / dfOrderItems.PAL\n",
-    "dfOrderItems['PicksCS'] = dfOrderItems.CorrespondingCartons \n",
-    "dfOrderItems['Picks OUT'] = dfOrderItems.CorrespondingOuters\n",
-    "#Bereinige Berechnungen der Picks \n",
-    "dfOrderItems['PicksPAL'] = dfOrderItems['PicksPAL'].fillna(0) \n",
-    "dfOrderItems['O'] = dfOrderItems.O.fillna(0) \n",
-    "dfOrderItems['Picks OUT'] = dfOrderItems['Picks OUT'].fillna(0) \n",
+    "# dfOrderItems['O'] = dfOrderItems['Outers'] * dfOrderItems['OUT']\n",
+    "# dfOrderItems['PicksPAL'] = dfOrderItems.O / dfOrderItems.PAL\n",
+    "# dfOrderItems['PicksCS'] = dfOrderItems.CorrespondingCartons \n",
+    "# dfOrderItems['Picks OUT'] = dfOrderItems.CorrespondingOuters\n",
+    "# #Bereinige Berechnungen der Picks \n",
+    "# dfOrderItems['PicksPAL'] = dfOrderItems['PicksPAL'].fillna(0) \n",
+    "# dfOrderItems['O'] = dfOrderItems.O.fillna(0) \n",
+    "# dfOrderItems['Picks OUT'] = dfOrderItems['Picks OUT'].fillna(0) \n",
     "\n",
-    "# Pal kleiner als 1 bereinigen\n",
-    "def f_PAL(row):\n",
-    "        if row.PicksPAL < 1:\n",
-    "            return 0\n",
-    "        else:\n",
-    "            return row.PicksPAL\n",
+    "# # Pal kleiner als 1 bereinigen\n",
+    "# def f_PAL(row):\n",
+    "#         if row.PicksPAL < 1:\n",
+    "#             return 0\n",
+    "#         else:\n",
+    "#             return row.PicksPAL\n",
     "\n",
-    "dfOrderItems['Picks PAL'] = dfOrderItems.apply(f_PAL,axis=1)\n",
+    "# dfOrderItems['Picks PAL'] = dfOrderItems.apply(f_PAL,axis=1)\n",
     "\n",
-    "def f_OUT(row):\n",
-    "        if row.PicksPAL >= 1:\n",
-    "            return row.CorrespondingCartons  - ((row.PicksPAL * row.PAL) / row.CS)\n",
-    "        else:\n",
-    "            return row.CorrespondingCartons\n",
+    "# def f_OUT(row):\n",
+    "#         if row.PicksPAL >= 1:\n",
+    "#             return row.CorrespondingCartons  - ((row.PicksPAL * row.PAL) / row.CS)\n",
+    "#         else:\n",
+    "#             return row.CorrespondingCartons\n",
     "\n",
-    "dfOrderItems['Picks CS'] = dfOrderItems.apply(f_OUT,axis=1)\n",
+    "# dfOrderItems['Picks CS'] = dfOrderItems.apply(f_OUT,axis=1)\n",
     "\n",
-    "dfOrderItems['Picks Gesamt'] = dfOrderItems['Picks PAL'] + dfOrderItems['Picks CS'] + dfOrderItems['Picks OUT']\n",
-    "df = pd.merge(dfOrder, dfOrderItems, left_on='SapOrderNumber', right_on='SapOrderNumber', how='left')\n",
-    "df = pd.merge(df, dfKunden, left_on='PartnerNo', right_on='PartnerNo', how='left')\n",
-    "# count in dfLabel sum of Status \"printed\" by SapOrderNumber\n",
-    "dfLabel = dfLabel[dfLabel['Status'] == 'printed']\n",
-    "dfLabel = dfLabel.groupby(['SapOrderNumber']).size().reset_index(name='LabelCount')\n",
-    "df['PicksGesamt'] = df['Picks Gesamt']\n",
+    "# dfOrderItems['Picks Gesamt'] = dfOrderItems['Picks PAL'] + dfOrderItems['Picks CS'] + dfOrderItems['Picks OUT']\n",
+    "# df = pd.merge(dfOrder, dfOrderItems, left_on='SapOrderNumber', right_on='SapOrderNumber', how='left')\n",
+    "# df = pd.merge(df, dfKunden, left_on='PartnerNo', right_on='PartnerNo', how='left')\n",
+    "# # count in dfLabel sum of Status \"printed\" by SapOrderNumber\n",
+    "# dfLabel = dfLabel[dfLabel['Status'] == 'printed']\n",
+    "# dfLabel = dfLabel.groupby(['SapOrderNumber']).size().reset_index(name='LabelCount')\n",
+    "# df['PicksGesamt'] = df['Picks Gesamt']\n",
     "\n",
-    "def f_Fertig(row):\n",
-    "    try:\n",
-    "        if row.AllSSCCLabelsPrinted == 1:\n",
-    "            return row.PicksGesamt\n",
-    "    except:\n",
-    "        return np.nan\n",
-    "df['PicksFertig'] = df.apply(f_Fertig,axis=1)\n",
-    "def f_Offen(row):\n",
-    "    try:\n",
-    "        if row.AllSSCCLabelsPrinted == 0:\n",
-    "            return row.PicksGesamt\n",
-    "    except:\n",
-    "        return np.nan\n",
-    "df['PicksOffen'] = df.apply(f_Offen,axis=1)\n",
+    "# def f_Fertig(row):\n",
+    "#     try:\n",
+    "#         if row.AllSSCCLabelsPrinted == 1:\n",
+    "#             return row.PicksGesamt\n",
+    "#     except:\n",
+    "#         return np.nan\n",
+    "# df['PicksFertig'] = df.apply(f_Fertig,axis=1)\n",
+    "# def f_Offen(row):\n",
+    "#     try:\n",
+    "#         if row.AllSSCCLabelsPrinted == 0:\n",
+    "#             return row.PicksGesamt\n",
+    "#     except:\n",
+    "#         return np.nan\n",
+    "# df['PicksOffen'] = df.apply(f_Offen,axis=1)\n",
     "\n",
-    "#drop row frow df if isReturnDelivery = 1\n",
-    "# convert  IDocNumberDESADV to string\n",
-    "df['IDocNumberDESADV'] = df['IDocNumberDESADV'].astype(str)\n",
+    "# #drop row frow df if isReturnDelivery = 1\n",
+    "# # convert  IDocNumberDESADV to string\n",
+    "# df['IDocNumberDESADV'] = df['IDocNumberDESADV'].astype(str)\n",
     "\n",
-    "df = df[df['IsReturnDelivery'] == 0]\n",
-    "df = df.fillna(0)\n",
-    "#df[QuantityCheckTimestamp to string\n",
-    "df['QuantityCheckTimestamp'] = df['QuantityCheckTimestamp'].astype(str)\n",
-    "df['Source'] = df['Source'].astype(str)\n",
+    "# df = df[df['IsReturnDelivery'] == 0]\n",
+    "# df = df.fillna(0)\n",
+    "# #df[QuantityCheckTimestamp to string\n",
+    "# df['QuantityCheckTimestamp'] = df['QuantityCheckTimestamp'].astype(str)\n",
+    "# df['Source'] = df['Source'].astype(str)\n",
     "\n",
     "\n",
-    "df"
+    "# df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = "
    ]
   }
  ],
