--- a/Data_Class/pw.ipynb
+++ b/Data_Class/pw.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,11 +12,11 @@
     "from SQL import datenLadenUser, updateUser\n",
     "import pandas as pd\n",
     "\n",
-    "names =  [\"Martin\",  \"Norbert\", 'MichaelK','Markus', 'MichaelP']\n",
-    "usernames = [\"martin\", \"norbert\", \"michaelk\", \"markus\", \"michaelp\"]\n",
-    "password = [\"Bruno24-\", \"schlangenleder\",\"unterfluhrschleppkettenfördersystem\",'Bayern1' ,'naIhrSpacken']\n",
-    "function = [\"admin\", \"user\", \"user\", \"user\", \"user\"]\n",
-    "rechte = [1,2,3,4,5]\n",
+    "names =  [\"Martin\",  \"Norbert\", 'MichaelK','Markus', 'MichaelP','Sabrina']\n",
+    "usernames = [\"martin\", \"norbert\", \"michaelk\", \"markus\", \"michaelp\", \"sabrina\"]\n",
+    "password = [\"Bruno24-\", \"schlangenleder\",\"unterfluhrschleppkettenfördersystem\",'Bayern1' ,'naIhrSpacken','SuperDepot2022']\n",
+    "function = [\"admin\", \"user\", \"user\", \"user\", \"user\",'user']\n",
+    "rechte = [1,2,3,4,5,1]\n",
     "\n",
     "\n",
     "hasched_passwords = stauth.Hasher(password).generate()\n",
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "      <th>0</th>\n",
        "      <td>Martin</td>\n",
        "      <td>martin</td>\n",
-       "      <td>$2b$12$Gp/SC8TLhQMa4bhO4RtfAeeBN..itt0yCcBxIxP...</td>\n",
+       "      <td>$2b$12$aADXmzKa4ygi23SNlz1mv./UZolb42ijNhnSH6M...</td>\n",
        "      <td>admin</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -73,7 +73,7 @@
        "      <th>1</th>\n",
        "      <td>Norbert</td>\n",
        "      <td>norbert</td>\n",
-       "      <td>$2b$12$MASV9O6Al/fau.RuUupfvesXFosS0mqW5tILLbM...</td>\n",
+       "      <td>$2b$12$nefhpUC1IGr4hxNhW/RWxOy5XCyo98qzepaS9Uq...</td>\n",
        "      <td>user</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -81,7 +81,7 @@
        "      <th>2</th>\n",
        "      <td>MichaelK</td>\n",
        "      <td>michaelk</td>\n",
-       "      <td>$2b$12$2s5rO3bHD3U7QD3/yipq9OBtdX1vGHjc29MLtS0...</td>\n",
+       "      <td>$2b$12$P.8tax9gz5lCqbFqok3sxebYPa1Ilh48S6iX4ov...</td>\n",
        "      <td>user</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
@@ -89,7 +89,7 @@
        "      <th>3</th>\n",
        "      <td>Markus</td>\n",
        "      <td>markus</td>\n",
-       "      <td>$2b$12$7kCFbCUbkyRC7TRjFrUXB.tUXOMeKcNa4/TO3h5...</td>\n",
+       "      <td>$2b$12$0pFvWF1aGBNcpcSQ0stWe.3rDoka9h5OAlWjlg3...</td>\n",
        "      <td>user</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
@@ -97,9 +97,17 @@
        "      <th>4</th>\n",
        "      <td>MichaelP</td>\n",
        "      <td>michaelp</td>\n",
-       "      <td>$2b$12$knBDEoXBcYS.8nMkvmhrkuuNWfwtWH3.qO3xC5O...</td>\n",
+       "      <td>$2b$12$AQFzL79wa0gNV5JqZC8IYe06PkrYG71f.28yL8E...</td>\n",
        "      <td>user</td>\n",
        "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Sabrina</td>\n",
+       "      <td>sabrina</td>\n",
+       "      <td>$2b$12$vNvSW2.P2QEEqZproERFVegKOEHnMiEmUPj/Svd...</td>\n",
+       "      <td>user</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -107,21 +115,23 @@
       ],
       "text/plain": [
        "       name  username                                           password  \\\n",
-       "0    Martin    martin  $2b$12$Gp/SC8TLhQMa4bhO4RtfAeeBN..itt0yCcBxIxP...   \n",
-       "1   Norbert   norbert  $2b$12$MASV9O6Al/fau.RuUupfvesXFosS0mqW5tILLbM...   \n",
-       "2  MichaelK  michaelk  $2b$12$2s5rO3bHD3U7QD3/yipq9OBtdX1vGHjc29MLtS0...   \n",
-       "3    Markus    markus  $2b$12$7kCFbCUbkyRC7TRjFrUXB.tUXOMeKcNa4/TO3h5...   \n",
-       "4  MichaelP  michaelp  $2b$12$knBDEoXBcYS.8nMkvmhrkuuNWfwtWH3.qO3xC5O...   \n",
+       "0    Martin    martin  $2b$12$aADXmzKa4ygi23SNlz1mv./UZolb42ijNhnSH6M...   \n",
+       "1   Norbert   norbert  $2b$12$nefhpUC1IGr4hxNhW/RWxOy5XCyo98qzepaS9Uq...   \n",
+       "2  MichaelK  michaelk  $2b$12$P.8tax9gz5lCqbFqok3sxebYPa1Ilh48S6iX4ov...   \n",
+       "3    Markus    markus  $2b$12$0pFvWF1aGBNcpcSQ0stWe.3rDoka9h5OAlWjlg3...   \n",
+       "4  MichaelP  michaelp  $2b$12$AQFzL79wa0gNV5JqZC8IYe06PkrYG71f.28yL8E...   \n",
+       "5   Sabrina   sabrina  $2b$12$vNvSW2.P2QEEqZproERFVegKOEHnMiEmUPj/Svd...   \n",
        "\n",
        "  function  rechte  \n",
        "0    admin       1  \n",
        "1     user       2  \n",
        "2     user       3  \n",
        "3     user       4  \n",
-       "4     user       5  "
+       "4     user       5  \n",
+       "5     user       1  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
