--- a/Test/TEST-1.ipynb
+++ b/Test/TEST-1.ipynb
@@ -356,17 +356,53 @@
     }
    ],
    "source": [
+    "# import pandas as pd\n",
+    "\n",
+    "\n",
+    "# def datenLaden():\n",
+    "#     # load data columnsName in row 4\n",
+    "\n",
+    "#     df = pd.read_excel(\"MLGT.xlsx\",header=3) \n",
+    "#     return df\n",
+    "# df= datenLaden()\n",
+    "# #df.fillna(0)\n",
+    "# df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "DataFrame.merge() got an unexpected keyword argument 'subset'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [2], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m df2 \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mDataFrame({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB1\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB2\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB3\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC1\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC2\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mC3\u001b[39m\u001b[38;5;124m\"\u001b[39m], \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mD\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mD1\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mD2\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mD3\u001b[39m\u001b[38;5;124m\"\u001b[39m]})\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# merge the two DataFrames, using the 'B' and 'C' columns as the keys, and only include columns 'A', 'C', and 'D'\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m df3 \u001b[38;5;241m=\u001b[39m \u001b[43mdf1\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmerge\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdf2\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mon\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mB\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mC\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhow\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43minner\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43msubset\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mA\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mC\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mD\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;66;03m# print the resulting DataFrame\u001b[39;00m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28mprint\u001b[39m(df3)\n",
+      "\u001b[0;31mTypeError\u001b[0m: DataFrame.merge() got an unexpected keyword argument 'subset'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
+    "# create the first DataFrame\n",
+    "df1 = pd.DataFrame({\"A\": [\"A1\", \"A2\", \"A3\"], \"B\": [\"B1\", \"B2\", \"B3\"], \"C\": [\"C1\", \"C2\", \"C3\"]})\n",
     "\n",
-    "def datenLaden():\n",
-    "    # load data columnsName in row 4\n",
+    "# create the second DataFrame\n",
+    "df2 = pd.DataFrame({\"B\": [\"B1\", \"B2\", \"B3\"], \"C\": [\"C1\", \"C2\", \"C3\"], \"D\": [\"D1\", \"D2\", \"D3\"]})\n",
     "\n",
-    "    df = pd.read_excel(\"MLGT.xlsx\",header=3) \n",
-    "    return df\n",
-    "df= datenLaden()\n",
-    "#df.fillna(0)\n",
-    "df"
+    "# merge the two DataFrames, using the 'B' and 'C' columns as the keys, and only include columns 'A', 'C', and 'D'\n",
+    "df3 = df1.merge(df2, on=[\"B\", \"C\"], how=\"inner\", subset=[\"A\", \"C\", \"D\"])\n",
+    "\n",
+    "# print the resulting DataFrame\n",
+    "print(df3)\n"
    ]
   }
  ],
