--- a/Data_Class/Untitled-1.ipynb
+++ b/Data_Class/Untitled-1.ipynb
@@ -2,105 +2,48 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mDer Kernel konnte nicht gestartet werden. \n",
+      "\u001b[1;31mJupyter server crashed. Unable to connect. \n",
+      "\u001b[1;31mError code from Jupyter: 1\n",
+      "\u001b[1;31musage: jupyter.py [-h] [--version] [--config-dir] [--data-dir] [--runtime-dir]\n",
+      "\u001b[1;31m                  [--paths] [--json] [--debug]\n",
+      "\u001b[1;31m                  [subcommand]\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mJupyter: Interactive Computing\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mpositional arguments:\n",
+      "\u001b[1;31m  subcommand     the subcommand to launch\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31moptions:\n",
+      "\u001b[1;31m  -h, --help     show this help message and exit\n",
+      "\u001b[1;31m  --version      show the versions of core jupyter packages and exit\n",
+      "\u001b[1;31m  --config-dir   show Jupyter config dir\n",
+      "\u001b[1;31m  --data-dir     show Jupyter data dir\n",
+      "\u001b[1;31m  --runtime-dir  show Jupyter runtime dir\n",
+      "\u001b[1;31m  --paths        show all Jupyter paths. Add --json for machine-readable\n",
+      "\u001b[1;31m                 format.\n",
+      "\u001b[1;31m  --json         output paths as machine-readable json\n",
+      "\u001b[1;31m  --debug        output debug information about paths\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mAvailable subcommands: lab labextension labhub nbclassic server\n",
+      "\u001b[1;31m\n",
+      "\u001b[1;31mJupyter command `jupyter-notebook` not found. \n",
+      "\u001b[1;31mWeitere Details finden Sie in Jupyter <a href='command:jupyter.viewOutput'>log</a>."
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "import pandas as pd\n",
-    "from  SQL import SQL_TabellenLadenBearbeiten as sql\n",
-    "import numpy as np\n",
     "\n",
-    "\n",
-    "#Daten von Lokal Laden\n",
-    "df = pd.read_excel('de55.XLSX') \n",
-    "##------------------ Stammdaten Laden und berechnen ------------------##\n",
-    "dfStammdaten = sql.sql_datenTabelleLaden('data_materialmaster-MaterialMasterUnitOfMeasures')\n",
-    "dfStammdaten = dfStammdaten[dfStammdaten['UnitOfMeasure'].isin(['CS','D97','OUT'])]\n",
-    "dfStammdaten['MaterialNumber'] = dfStammdaten['MaterialNumber'].str.replace('0000000000', '')\n",
-    "dfStammdaten = dfStammdaten[dfStammdaten['UnitOfMeasure'].isin(['CS','D97','OUT'])]   \n",
-    "def f_CS(row):\n",
-    "    try:\n",
-    "        if row.UnitOfMeasure == 'CS':          \n",
-    "            return row.NumeratorToBaseUnitOfMeasure / row.DenominatorToBaseUnitOfMeasure\n",
-    "    except:\n",
-    "        return np.nan\n",
-    "def f_PAL(row):\n",
-    "    try:\n",
-    "        if row.UnitOfMeasure == 'D97':\n",
-    "            return row.NumeratorToBaseUnitOfMeasure / row.DenominatorToBaseUnitOfMeasure\n",
-    "    except:\n",
-    "        return np.nan\n",
-    "def f_OUT(row):\n",
-    "    try:\n",
-    "        if row.UnitOfMeasure == 'OUT':\n",
-    "            return row.NumeratorToBaseUnitOfMeasure / row.DenominatorToBaseUnitOfMeasure\n",
-    "    except:\n",
-    "        return np.nan\n",
-    "dfStammdaten['OUT'] = dfStammdaten.apply(f_OUT,axis=1)\n",
-    "dfStammdaten['CS'] = dfStammdaten.apply(f_CS,axis=1)\n",
-    "dfStammdaten['PAL'] = dfStammdaten.apply(f_PAL,axis=1)\n",
-    "#Umbenennen der Spalten    \n",
-    "df = df.rename(columns={'Material':'SKU'})\n",
-    "dfStammdaten = dfStammdaten.rename(columns={'MaterialNumber':'SKU'})\n",
-    "#Merge Stammdaten mit Lieferdaten\n",
-    "df['SKU'] = df['SKU'].astype(str)\n",
-    "\n",
-    "df = pd.merge(df, dfStammdaten[dfStammdaten['UnitOfMeasure'] == 'CS'][['SKU','CS']],left_on='SKU', right_on='SKU',how='left')\n",
-    "df = pd.merge(df, dfStammdaten[dfStammdaten['UnitOfMeasure'] == 'D97'][['SKU','PAL']],left_on='SKU', right_on='SKU',how='left')\n",
-    "df = pd.merge(df, dfStammdaten[dfStammdaten['UnitOfMeasure'] == 'OUT'][['SKU','OUT']],left_on='SKU', right_on='SKU',how='left')\n",
-    "# Berechne Picks\n",
-    "# rename df Actual delivery qty to O\n",
-    "df = df.rename(columns={'Actual delivery qty':'O'})\n",
-    "\n",
-    "df['Picks PAL'] = df.O / df.PAL\n",
-    "df['Picks CS'] = df.O / df.CS\n",
-    "df['Picks OUT'] = df.O / df.OUT\n",
-    "#Bereinige Berechnungen der Picks \n",
-    "for i in range(0,len(df.index)):\n",
-    "    #----PAL bereinigen\n",
-    "        if (df.loc[i,'Picks PAL'] <1):\n",
-    "            df.loc[i,'Picks PAL'] = 0\n",
-    "    #----cs bereinigen\n",
-    "        if (df.loc[i,'Picks CS'] <1):\n",
-    "            df.loc[i,'Picks CS'] = 0 \n",
-    "    #mögliche PAL picks abziehen\n",
-    "        if (df.loc[i,'Picks PAL'] >=1):\n",
-    "            df.loc[i,'Picks CS'] = (df.loc[i,'O'] - (df.loc[i,'Picks PAL'] * df.loc[i,'PAL'])) * df.loc[i,'CS']\n",
-    "    #---OUT bereinigen\n",
-    "        if (df.loc[i,'Picks OUT'] <1):\n",
-    "            df.loc[i,'Picks OUT'] = 0\n",
-    "    #mögliche PAL picks abziehen\n",
-    "        if (df.loc[i,'Picks PAL'] >=1):\n",
-    "            df.loc[i,'Picks OUT'] = (df.loc[i,'O'] - (df.loc[i,'Picks PAL'] * df.loc[i,'PAL'])) * df.loc[i,'OUT']\n",
-    "    #mögliche CS picks abziehen\n",
-    "        if (df.loc[i,'Picks CS'] >=1):\n",
-    "            df.loc[i,'Picks OUT'] = 0#(df.loc[i,'O'] - (df.loc[i,'Picks CS'] * df.loc[i,'CS'])) * df.loc[i,'OUT']\n",
-    "# Picks Gesamt\n",
-    "df['Picks Gesamt'] = df['Picks PAL'] + df['Picks CS'] + df['Picks OUT']\n",
-    "df['Kalender Woche'] = df['Picking Date'].dt.strftime('%U')\n",
-    "df['Monat'] = df['Picking Date'].dt.month\n",
-    "df.to_parquet('dfDe55.parquet')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dfKunden = pd.read_excel('de55Kunden.XLSX') \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#merge Kunden mit Lieferdaten\n",
-    "df = pd.merge(df, dfKunden,left_on='Sold-To Party', right_on='Customer',how='left')"
+    "dfLT22 = pd.read_parquet('Data/upload/lt22.parquet')\n"
    ]
   }
  ],
