--- a/IPYNB/Lagenfaktor.ipynb
+++ b/IPYNB/Lagenfaktor.ipynb
@@ -2,9 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mDer Kernel konnte nicht gestartet werden. \n",
+      "\u001b[1;31mJupyter server crashed. Unable to connect. \n",
+      "\u001b[1;31mError code from Jupyter: 1\n",
+      "\u001b[1;31mError executing Jupyter command 'notebook': [Errno 2] No such file or directory. \n",
+      "\u001b[1;31mWeitere Details finden Sie in Jupyter <a href='command:jupyter.viewOutput'>log</a>."
+     ]
+    }
+   ],
    "source": [
     "\n",
     "from SQL import SQL_TabellenLadenBearbeiten as SQL\n",
@@ -14,9 +27,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mDer Kernel konnte nicht gestartet werden. \n",
+      "\u001b[1;31mJupyter server crashed. Unable to connect. \n",
+      "\u001b[1;31mError code from Jupyter: 1\n",
+      "\u001b[1;31mError executing Jupyter command 'notebook': [Errno 2] No such file or directory. \n",
+      "\u001b[1;31mWeitere Details finden Sie in Jupyter <a href='command:jupyter.viewOutput'>log</a>."
+     ]
+    }
+   ],
    "source": [
     "def orderDatenLines():\n",
     "    '''Lädt die Daten aus der Datenbank und berechnet die Werte\n",
@@ -71,7 +97,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
