--- a/test.ipynb
+++ b/test.ipynb
@@ -2,6 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from PIL import Image \n",
+    "\n",
+    "\n",
+    "# lade png img /Library/Python_local/Superdepot Reporting/Data/img/neu_logo.png\n",
+    "\n",
+    "img = Image.open('/Library/Python_local/Superdepot Reporting/Data/img/neu_logo.png')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
